# experiment

./: CMakeLists.txt  winbuild.bat
src/: shm.cpp  sync.cpp
